fix broken references

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -170,3 +170,21 @@
   title = {Extremal (Maximum Determinant) points on the sphere $S^2$},
   howpublished = {\url{http://web.maths.unsw.edu.au/~rsw/Sphere/Extremal/New/index.html}}
 }
+
+@techreport{peplow,
+  title={Consistent Adjoint Driven Importance Sampling using Space, Energy, and Angle},
+  author={Peplow, Douglas E. and Mosher, Scott W. and Evans, Thomas M.},
+  year={2012},
+  institution={Oak Ridge National Laboratory},
+  number={ORNL/TM-2012/7}
+}
+
+@article{cadisom, 
+  title={FW/CADIS-$\Omega$: An angle-informed hybrid method for deep-penetration radiation transport},
+  author={M. Munk and R.N. Slaybaugh and Tara M. Pandya and Seth R. Johnson and T. M. Evans},
+  journal={Proceedings of the PHYSOR 2016 Meeting in Sun Valley, ID},
+  year={May 2016},
+  publisher={American Nuclear Society},
+  url={https://arxiv.org/pdf/1612.00793.pdf}
+}
+
