comments in past work.

--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -419,7 +419,7 @@ than from just using the standard space/energy CADIS.''
 
 One of the most recent developments in the area of angle-informed hybrid
 methods is \co, introduced by Munk et al.\ in 2016 \cite{cadisom}. This method
-calculates an alternate form of the adjoint scalar flux quantity that is then
+calculates an alternative form of the adjoint scalar flux quantity that is then
 used in the CADIS and \fwc\ methods for generation of variance reduction
 parameters for local and global response functions, respectively. The \co\
 method was implemented in the ADVANTG framework, with numerical experiments
@@ -442,6 +442,11 @@ quadrature and \pn\ orders at high energies. Similarly, for a simple labyrinth
 geometry of an air maze through a concrete block, \co\ achieved lower relative
 errors than did standard CADIS in the epithermal and fast neutron energy
 groups.
+
+There have been several other efforts to improve variance reduction techniques for problems with strong particle streaming anisotropies such as  (list several here).
+See (is this in your background section? if not, list Madicken's) for full details. 
+The conclusions of these research efforts have been that methods either work predictably but are complex to use, putting a high burden on user expertise, or are simple to use but do not consistently perform well. 
+% something like that just so the world knows there are other places to look.  
 
 %%---------------------------------------------------------------------------%%
 \section{Test Cases and Calculation Parameters}
