address comments, fix FOM thing that was bugging me

--- a/ldo-mc-vr.bib
+++ b/ldo-mc-vr.bib
@@ -188,3 +188,52 @@
   url={https://arxiv.org/pdf/1612.00793.pdf}
 }
 
+@article{avatar,
+  title = {AVATAR -- Automatic variance reduction in {Monte} {Carlo} calculations},
+  url = {http://www.osti.gov/scitech/biblio/527548},
+  author = {Van Riper, Kenneth A. and Urbatsch, Todd J. and Soran, Patrick D. and Parsons, D. Kent and Morel, Jim E. and McKinney, Gregg W. and Lee, Stephen R. and Crotzer, Laura A. and Brinkley, Forrest W. and Anderson, Jacob W. and Alcouffe, Raymond E.},
+  year = {October 1997},
+  journal={Proceedings of the Joint International Conference on Mathematical Methods \& Supercomputing for Nuclear Applications in Saratoga Springs, NY},
+  publisher={American Nuclear Society}
+}
+
+@article{clww,
+  title = {Automated weight windows for global {Monte} {Carlo} particle transport calculations},
+  volume = {137},
+  url = {http://www.ans.org/pubs/journals/nse/a_2171},
+  number = {1},
+  journal = {Nuclear science and engineering},
+  author = {Cooper, Marc A. and Larsen, Edward W.},
+  year = {2001},
+  pages = {1--13}
+}
+
+@article{lift1,
+  title = {Automatic variance reduction for three-dimensional {Monte} {Carlo} simulations by the local importance function transform-{I}: {Analysis}},
+  volume = {127},
+  url = {https://doi.org/10.13182/NSE127-22},
+  number = {1},
+  journal = {Nuclear Science and Engineering},
+  author = {Turner, Scott A. and Larsen, Edward W.},
+  year = {1997},
+  pages = {22--35}
+}
+
+@article{lift2,
+  title = {Automatic variance reduction for three-dimensional {Monte} {Carlo} simulations by the local importance function transform-{II}: {Numerical Results}},
+  volume = {127},
+  url = {https://doi.org/10.13182/NSE127-36},
+  number = {1},
+  journal = {Nuclear Science and Engineering},
+  author = {Turner, Scott A. and Larsen, Edward W.},
+  year = {1997},
+  pages = {36--53}
+}
+
+@phdthesis{kr,
+  author       = {Kelly L. Rowland}, 
+  title        = {Advanced Quadrature Selection for Monte Carlo Variance Reduction},
+  school       = {University of California, Berkeley},
+  year         = 2018,
+  url          = {https://github.com/kellyrowland/dissertation}
+}
